# ao-tune

./: .gitignore  AGENTS.md  LICENSE  README.md  docker-compose.yml
.github/workflows/: ci.yml
apps/api/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20260629_0001_create_lyrics_learning_artifacts.py  20260703_0002_create_application_preferences.py  20260706_0003_application_settings_jsonb.py  20260707_0004_add_song_sheet_display_settings.py
apps/api/app/: __init__.py  config.py  db.py  lyrics_learning.py  main.py
apps/api/app/agents/: __init__.py  lyrics_learning_prompt.py  lyrics_learning_provider.py  lyrics_learning_provider_factory.py
apps/api/app/api/routes/: lyrics_learning.py  preferences.py  settings.py
apps/api/app/models/: application_preferences.py  application_settings.py  lyrics_learning.py
apps/api/app/repositories/: application_preferences_repository.py  application_settings_repository.py  lyrics_learning_repository.py
apps/api/app/schemas/: lyrics_learning.py  preferences.py  settings.py
apps/api/app/services/: application_preferences_service.py  application_settings_service.py  lyrics_learning_service.py
apps/api/tests/: test_agent_provider.py  test_application_preferences.py  test_application_settings.py  test_config.py  test_lyrics_learning_persistence.py  test_main.py
apps/web/: Dockerfile  package-lock.json  package.json  tsconfig.test.json
docs/: PROJECT_VISION.md
docs/engineering/: ARCHITECTURE.md  CODING_STANDARDS.md  I18N_GUIDE.md  TECH_STACK.md
(+40 files in other folders)
